# AlfredCapital_Task02

./: .env  Cargo.toml  README.md
src/: README.md  config.rs  main.rs  profit.rs
